Fix AssignButton popover to word-wrap text at bottom-#3715

--- a/app/assets/stylesheets/modules/_popover.styl
+++ b/app/assets/stylesheets/modules/_popover.styl
@@ -28,6 +28,8 @@
       opacity 1
       visibility visible
       pointer-events all
+      width 300px
+      max-width 300px
       /*@replace: translateX(0px) translateY(0) scale(1, 1)*/ transform translateX(0px) translateY(0) scale(1, 1)
       /*@replace: translateX(0px) translateY(0) scale(1, 1)*/ -webkit-transform translateX(0px) translateY(0) scale(1, 1)
     &:before
